hphp/hack/test/typecheck/readonly/exceptions.php.exp
File "exceptions.php", line 4, characters 11-13:
This exception is readonly; throwing readonly exceptions is not currently supported. (Parsing[1002])
